--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -38,10 +38,6 @@ url = "2.5.0"
 futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
 async-trait = "0.1.80"
 
-# Pin these versions to fix iOS build issues
-security-framework = "=2.10.0"
-security-framework-sys = "=2.10.0"
-
 [dev-dependencies]
 tempdir = "0.3.7"
 uuid = { version = "1.8.0", features = ["v4"] }
@@ -49,3 +45,8 @@ uuid = { version = "1.8.0", features = ["v4"] }
 [build-dependencies]
 anyhow = { version = "1.0.79", features = ["backtrace"] }
 glob = "0.3.1"
+
+# Pin these versions to fix iOS build issues
+[target.'cfg(target_os = "ios")'.build-dependencies]
+security-framework = "=2.10.0"
+security-framework-sys = "=2.10.0"
