--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -28,7 +28,7 @@ lwk_wollet = { git = "https://github.com/dangeross/lwk", branch = "savage-try-he
 #lwk_wollet = "0.5.1"
 rusqlite = { version = "0.31", features = ["backup", "bundled"] }
 rusqlite_migration = "1.0"
-sdk-common = { git = "https://github.com/breez/breez-sdk", branch = "ok300-chain-api-servers-boltz-swapper" }
+sdk-common = { git = "https://github.com/breez/breez-sdk", branch = "main" }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
 thiserror = { workspace = true }
