--- a/.github/workflows/build-bindings-android.yml
+++ b/.github/workflows/build-bindings-android.yml
@@ -49,6 +49,12 @@ jobs:
         rustup target add ${{ matrix.target }}
         cargo install cargo-ndk
 
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v2
+      with:
+        version: "23.4"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        
     - uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib
