--- a/.github/workflows/build-bindings-linux.yml
+++ b/.github/workflows/build-bindings-linux.yml
@@ -46,6 +46,12 @@ jobs:
         rustup toolchain install stable --profile minimal
         rustup target add ${{ matrix.target }}
 
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v2
+      with:
+        version: "23.4"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Install gcc-aarch64-linux-gnu
       if: matrix.target == 'aarch64-unknown-linux-gnu'
       run: |
