--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -44,6 +44,7 @@ reqwest = { version = "=0.11.20", features = ["json"] }
 electrum-client = { version = "0.19.0" }
 
 [dev-dependencies]
+lazy_static = "1.5.0"
 paste = "1.0.15"
 tempdir = "0.3.7"
 uuid = { version = "1.8.0", features = ["v4"] }
