--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -173,18 +173,16 @@ jobs:
 
       - name: Generate Dart/Flutter bindings
         working-directory: lib/bindings/langs/flutter/
-        continue-on-error: true
-        run: |
-          just codegen
+        run: just codegen
 
       - name: Generate FFI bindings
         working-directory: lib/bindings/langs/flutter/
-        continue-on-error: true
-        run: |
-          just ffigen
+        if: ${{ success() || failure() }}
+        run: just ffigen
 
       - name: Static Analysis
         working-directory: lib/bindings/langs/flutter/
+        if: ${{ success() || failure() }}
         run: melos analyze
 
       - name: Check Formatting
