--- a/packages/flutter/android/CMakeLists.txt
+++ b/packages/flutter/android/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(LibraryVersion "breez_liquid-v0.1.0") # generated; do not edit
+set(TagName "0.1.0") # generated; do not edit
+set(LibraryVersion "breez_liquid-v${TagName}")
 
 # Unlike the Windows & Linux CMakeLists.txt, this Android equivalent is just here
 # to download the Android binaries into src/main/jniLibs/ and does not build anything.
@@ -15,7 +16,7 @@ set(LibRoot "${CMAKE_CURRENT_SOURCE_DIR}/src/main/jniLibs")
 set(ArchivePath "${CMAKE_CURRENT_SOURCE_DIR}/${LibraryVersion}.tar.gz")
 if(NOT EXISTS ${ArchivePath})
   file(DOWNLOAD
-    "https://github.com/breez/breez-liquid-sdk/releases/download/${LibraryVersion}/android.tar.gz"
+    "https://github.com/breez/breez-liquid-sdk-flutter/releases/download/${TagName}/android.tar.gz"
     ${ArchivePath}
     TLS_VERIFY ON
   )
