--- a/.github/workflows/publish-dart.yml
+++ b/.github/workflows/publish-dart.yml
@@ -55,8 +55,9 @@ jobs:
       - name: Copy docs
         working-directory: dist
         run: |
-          cp ../build/packages/dart/README.md . || true
           cp ../build/packages/dart/CHANGELOG.md . || true
+          cp ../build/packages/dart/LICENSE . || true
+          cp ../build/packages/dart/README.md . || true
 
       - name: Set package version
         working-directory: dist
