--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -2,7 +2,8 @@ name: breez_liquid
 description: Dart bindings for the Breez Liquid SDK
 version: 0.1.0
 homepage: https://breez.technology
-repository: https://github.com/breez/breez-liquid-sdk
+repository: https://github.com/breez/breez-liquid-sdk-dart
+publish_to: 'none'
 
 platforms:
   macos:
