--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -2,6 +2,8 @@ name: flutter_breez_liquid
 description: Flutter wrapper around Dart bindings for the Breez Liquid SDK
 version: 0.1.0
 homepage: https://breez.technology
+repository: https://github.com/breez/breez-liquid-sdk-flutter
+publish_to: 'none'
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -10,7 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  breez_liquid: ^0.1.0
+  breez_liquid:
+    git:
+      url: https://github.com/breez/breez-liquid-sdk-dart
   ffigen: ">=8.0.0 <=11.0.0"
 
 dev_dependencies:
