--- a/packages/flutter/android/CMakeLists.txt
+++ b/packages/flutter/android/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(TagName "0.1.0") # generated; do not edit
-set(LibraryVersion "breez_liquid-v${TagName}")
+set(TagName "v0.1.0") # generated; do not edit
+set(LibraryVersion "breez_liquid-${TagName}")
 
 # Unlike the Windows & Linux CMakeLists.txt, this Android equivalent is just here
 # to download the Android binaries into src/main/jniLibs/ and does not build anything.
